syntax = "proto3";

package go.micro.srv.example;
import "google/api/annotations.proto";

service Example {
	rpc Call(Request) returns (Response) {
		option (google.api.http) = {
			get: "/call"
		};
	}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message Request {
	string name = 1;
}

message Response {
	string msg = 1;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
